--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
 import '../styles/global.css';
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
 
 const pageTitle = "Home";
 ---
@@ -13,9 +15,13 @@ const pageTitle = "Home";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
-		<a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
-		<h1>My Astro Site</h1>
+		<Header />
+		<h1>{pageTitle}</h1>
+		<Footer />
+		<script>
+			// Importante: o codigo dentro de tags scripts eh enviado ao browser e disponivel para execucao de acordo com interacoes do usuario
+			// ja o codigo no frontpage (entre --) eh usado em tempo de build para criar html estatico e entao o codigo eh "descartado"
+			import "../scripts/menu.js"
+		</script>
 	</body>
 </html>
