feat: creating and usin layouts

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,27 +1,9 @@
 ---
-import '../styles/global.css';
-import Footer from '../components/Footer.astro';
-import Header from '../components/Header.astro';
+
+import BaseLayout from '../layouts/BaseLayout.astro';
 
 const pageTitle = "Home";
 ---
-
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-	</head>
-	<body>
-		<Header />
-		<h1>{pageTitle}</h1>
-		<Footer />
-		<script>
-			// Importante: o codigo dentro de tags scripts eh enviado ao browser e disponivel para execucao de acordo com interacoes do usuario
-			// ja o codigo no frontpage (entre --) eh usado em tempo de build para criar html estatico e entao o codigo eh "descartado"
-			import "../scripts/menu.js"
-		</script>
-	</body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+	<h2>My awesome blog subtitle</h1>
+</BaseLayout>
