--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,20 @@
 ---
 import Hamburguer from './Hamburguer.astro';
 import Navigation from './Navigation.astro';
+import ThemeIcon from './ThemeIcon.astro';
 ---
 <header>
-    <nav>
+    <nav class="nav">
         <Hamburguer />
         <Navigation />
+        <ThemeIcon />
     </nav>
 </header>
+
+<style>
+    .nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+</style>
