feat: little improvements on colors and style

--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -6,7 +6,7 @@ const { url, title } = Astro.props;
 <style>
   a {
     padding: 2rem 1rem;
-    color:#4c1d95;
+    color:#DD7373;
     text-decoration: none;
   }
 </style>
