--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
+
 html {
-  background-color: #f1f5f9;
-  font-family: sans-serif;
+  background-color: #F8F0FB;
+  font-family: "Nunito Sans", sans-serif;
 }
 
 body {
@@ -31,14 +33,14 @@ h1 {
   width: 40px;
   height: 5px;
   margin-bottom: 10px;
-  background-color: #ff9776;
+  background-color: #DD7373;
 }
 
 .nav-links {
   width: 100%;
   top: 5rem;
   left: 48px;
-  background-color: #ff9776;
+  background-color: #DD7373;
   display: none;
   margin: 0;
 }
@@ -51,11 +53,12 @@ h1 {
   font-size: 1.2rem;
   font-weight: bold;
   text-transform: uppercase;
+  border: 3px solid transparent;
 }
 
 .nav-links a:hover,
 .nav-links a:focus {
-  background-color: #ff9776;
+  border-bottom: 3px solid #DD7373;
 }
 
 .expanded {
@@ -82,7 +85,7 @@ h1 {
 }
 
 html.dark {
-  background-color: #0d0950;
+  background-color: #273043;
   color: #fff;
 }
 
